# numiproof

./: Cargo.toml  readme.md
numiproof-air/: Cargo.toml
numiproof-air/src/: examples.rs  lib.rs
numiproof-cli/: Cargo.toml
numiproof-cli/src/: main.rs
numiproof-field/: Cargo.toml
numiproof-field/src/: lib.rs
numiproof-fri/: Cargo.toml
numiproof-fri/src/: lib.rs
numiproof-hash/: Cargo.toml  lib.rs
numiproof-hash/src/: lib.rs
numiproof-merkle/: Cargo.toml
numiproof-merkle/src/: lib.rs
numiproof-poly/: Cargo.toml
numiproof-poly/src/: lib.rs
numiproof-privacy/: Cargo.toml
numiproof-privacy/src/: air.rs  lib.rs  mlkem.rs
numiproof-proof/: Cargo.toml
numiproof-proof/src/: lib.rs
numiproof-recursion/: Cargo.toml
numiproof-recursion/src/: lib.rs
numiproof-spec/: Cargo.toml
numiproof-spec/src/: lib.rs
