# File: Cargo.toml
# Numan Thabit
[workspace]
members = [
  "numiproof-hash",
  "numiproof-merkle",
  "numiproof-air",
  "numiproof-proof",
  "numiproof-field",
  "numiproof-poly",
  "numiproof-fri",
  "numiproof-cli",
  "numiproof-recursion",
  "numiproof-privacy",
  "numiproof-spec",
]
resolver = "2"