# File: numiproof-cli/Cargo.toml
[package]
name = "numiproof-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
numiproof-air = { path = "../numiproof-air" }
numiproof-proof = { path = "../numiproof-proof" }
bincode = "1"
hex = "0.4"