# File: numiproof-proof/Cargo.toml
[package]
name = "numiproof-proof"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
numiproof-hash = { path = "../numiproof-hash" }
numiproof-merkle = { path = "../numiproof-merkle" }
numiproof-air = { path = "../numiproof-air" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
rand = "0.8"